# ccsum

./: .gitignore  Cargo.toml  README.md  Rakefile  demo.tape
.github/workflows/: check.yml  release.yml
demo/foo/: 03.txt
src/: digest_ext.rs  escape.rs  main.rs  table.rs  utils.rs
tests/: main.rs
